# Learning-Ocaml

./: dune-project  learning_ocaml.opam
Excercises/: dune  list.ml
Notes/: dune
Notes/Data_and_Types/: dune
Practice/: .Function_practice.ml.swp  Function_practice.ml  records_practice.ml  tuples.ml
Projects/: .Student Report System.ml.swp  Calculator.ml
The Basics of OCaml/: Exceptions.ml  Functions.ml  Match.ml  Options.ml  Records And Tuples\.ml  Variable and Expressions.ml  Variants.ml
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/Notes/Data_and_Types/: data_and_types.cma  data_and_types.cmxa  data_and_types.cmxs  data_and_types.ml-gen  list.ml  records.ml  tree.ml  tuples.ml  variants.ml
_build/default/Notes/Data_and_Types/.data_and_types.objs/: data_and_types__Exercises.impl.d  data_and_types__List.impl.d  data_and_types__Records.impl.d  data_and_types__Tree.impl.d  data_and_types__Tuples.impl.d  data_and_types__Type_synonyms.impl.d  data_and_types__Variants.impl.d
_build/default/Notes/Data_and_Types/.data_and_types.objs/byte/: data_and_types.cmi  data_and_types.cmo  data_and_types.cmt  data_and_types__Exercises.cmi  data_and_types__Exercises.cmo  data_and_types__Exercises.cmt  data_and_types__List.cmi  data_and_types__List.cmo  data_and_types__List.cmt  data_and_types__Records.cmi  data_and_types__Records.cmo  data_and_types__Records.cmt  data_and_types__Tree.cmi  data_and_types__Tree.cmo  (+10 more)
_build/default/Notes/Data_and_Types/.merlin-conf/: lib-data_and_types
test/: dune
(+8 files in other folders)
