(lang dune 3.20)
(name learning_ocaml)

(generate_opam_files true)

(source (github username/reponame))

(authors "Author Name <author@example.com>")
(maintainers "Maintainer Name <maintainer@example.com>")
(license LICENSE)
(documentation https://url/to/documentation)

(package
 (name learning_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags ("learning" "ocaml" "examples")))

